samples/_failures_safe/1761321241_e26328_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4977aac.c: In function ‘main’:
./samples/SAFE/__tmp_f4977aac.c:141:13: error: expected declaration or statement at end of input
  141 |             printf("%02X ", chunk_list.chunks[i].data[j]);
      |             ^~~~~~
./samples/SAFE/__tmp_f4977aac.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f4977aac.c:141:13: error: expected declaration or statement at end of input
